--- a/templates/404.html
+++ b/templates/404.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 
-{% block title %}Page Not Found - Luna Moth{% endblock %}
+{% block title %}Page Not Found | Bunker11{% endblock %}
 
 {% block meta_description %}
-<meta name="description" content="Oops! This page doesn't exist. Return to Luna Moth to explore women's circles, yoga, and guidance." />
+<meta name="description" content="Oops! This page doesn't exist." />
 {% endblock %}
 
-{% block og_title %}404 – Page Not Found | Luna Moth{% endblock %}
-{% block og_description %}This page isn't available. Discover Luna Moth's menstrual awareness and yoga offerings.{% endblock %}
+{% block og_title %}404 – Page Not Found | Bunker11{% endblock %}
+{% block og_description %}This page isn't available.{% endblock %}
 
-{% block twitter_title %}Page Not Found – Luna Moth{% endblock %}
-{% block twitter_description %}This page doesn't exist. Return to Luna Moth to reconnect with our offerings.{% endblock %}
+{% block twitter_title %}Page Not Found – Bunker11{% endblock %}
+{% block twitter_description %}This page doesn't exist.{% endblock %}
 
 {% block content %}
     <div class="error-container">
