--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <title>{% block title %}BuNker11 - Live Music and Events{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     {% block extra_css %}
-    <!-- Page-specific CSS will be included here -->
+    <!-- Page-specific CSS -->
     {% endblock %}
 
     <!-- Google Fonts -->
