--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,3 @@
-/* Hero Section */
 .hero {
     position: relative;
     overflow: hidden;
@@ -29,7 +28,6 @@
     z-index: 1;
 }
 
-/* Venue Description */
 .venue-description {
     font-family: 'Alike Angular', serif;
     text-align: center;
@@ -50,7 +48,6 @@
     line-height: 1.6;
 }
 
-/* Upcoming Events */
 .upcoming-events {
     padding: 40px 20px;
     background-color: #222;
@@ -66,15 +63,13 @@
     font-size: 4rem;
 }
 
-/* Event Grid */
 .events-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3 cards per row */
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     padding: 20px;
 }
 
-/* Event Card */
 .event-card {
     display: flex;
     flex-direction: column;
@@ -90,7 +85,6 @@
     padding: 5px;
 }
 
-/* Event Image */
 .event-image {
     width: calc(100% - 10px);
     height: auto;
@@ -101,7 +95,6 @@
     margin-top: 2.5px;
 }
 
-/* Event Details */
 .event-details {
     display: flex;
     flex-direction: column;
@@ -110,7 +103,6 @@
     padding: 10px;
 }
 
-/* Event Title */
 .event-title {
     font-size: 2.4rem;
     font-weight: bold;
@@ -124,17 +116,15 @@
 .event-title:hover {
     color: #b22222;
     text-decoration: underline;
-    text-underline-offset: 3px; /* adds a little space below the text */
-    text-decoration-thickness: 2px; /* makes the underline a bit bolder */
+    text-underline-offset: 3px;
+    text-decoration-thickness: 2px;
     text-decoration-color: #b22222;
 }
 
-/* Spacer */
 .spacer {
     flex-grow: 0.5;
 }
 
-/* Event Datetime */
 .event-datetime {
     font-size: 1rem;
     color: #faa400;
@@ -144,7 +134,6 @@
     padding-top: 10px;
 }
 
-/* Bottom Section */
 .event-bottom {
     display: flex;
     justify-content: space-between;
@@ -222,7 +211,6 @@
     transition: opacity 0.3s ease;
 }
 
-/* Social Sharing */
 .social-sharing {
     text-align: center;
     padding: 20px;
@@ -250,7 +238,6 @@
     color: black;
 }
 
-/* Section Divider */
 .section-divider {
     width: 100%;
     margin: 0 auto 30px auto;
@@ -265,7 +252,6 @@
   background-color: #222;
 }
 
-/* Prevent underline on all text inside event links except the event title */
 .events-grid a:hover,
 .events-grid a:hover * {
     text-decoration: none;
@@ -330,4 +316,3 @@
         font-size: 0.9rem;
     }
 }
-
