--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,4 +1,3 @@
-/* Login Section */
 .login-section {
     max-width: 400px;
     margin: 70px auto 90px auto;
@@ -7,7 +6,7 @@
     border-radius: 12px;
     box-shadow: 0 4px 16px rgba(0,0,0,0.5);
     color: #faa400;
-    position: relative; /* Add this to position children absolutely within */
+    position: relative;
 }
 
 .login-section h2 {
@@ -116,7 +115,6 @@
     }
 }
 
-/* Flash Messages */
 .flash-messages {
     margin-bottom: 18px;
     text-align: center;
