--- a/static/css/home.css
+++ b/static/css/home.css
@@ -162,7 +162,7 @@
     display: flex;
     align-items: center;
     font-size: 0.9rem;
-    color: #797463;
+    color: #b6b1a0;
 }
 
 .event-countdown .clock-icon {
