--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,19 @@
     <!-- Page-specific CSS -->
     {% endblock %}
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Alike+Angular&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
+    <style>
+    @font-face {
+        font-family: 'Alike Angular';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url("{{ url_for('static', filename='fonts/alike-angular-v26-latin-regular.woff2') }}") format("woff2");
+    }
+
+    body {
+        font-family: 'Alike Angular', serif;
+    }
+    </style>
 
     <!-- Favicons -->
     <link rel="icon" href="{{ url_for('static', filename='images/favicon_io/favicon.ico') }}" type="image/x-icon">
@@ -60,7 +70,7 @@
     <footer>
         <div class="footer-section address">
             <h4>
-                <img src="{{ url_for('static', filename='images/icons/location_pin.png') }}" alt="Location" class="footer-icon">
+                <img src="{{ url_for('static', filename='images/icons/location_pin.png') }}" alt="Location Information" class="footer-icon">
                 Venue Info
             </h4>
             <p class="full">BuNker11<br>54-60 Heene Rd, Worthing,<br>West Sussex, BN11 3RG</p>
@@ -68,29 +78,26 @@
         </div>
         <div class="footer-section tot">
             <h4>
-                <img src="{{ url_for('static', filename='images/tot_record-invis.png') }}" alt="TOT Presents" class="footer-icon">
+                <img src="{{ url_for('static', filename='images/tot_record-invis.png') }}" alt="TOT Presents Logo" class="footer-icon">
                 TOT Social Media
             </h4>
             <ul>
-                <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
-                <li><a href="https://www.instagram.com/totpresents/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Instagram">Instagram</a></li>
-                <li><a href="https://www.youtube.com/channel/UCDvFWE_kn242G_JzyuC_StA" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.png') }}" alt="YouTube">YouTube</a></li>
+                <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="TOT Presents on Facebook">Facebook</a></li>
+                <li><a href="https://www.instagram.com/totpresents/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="TOT Presents on Instagram">Instagram</a></li>
+                <li><a href="https://www.youtube.com/channel/UCDvFWE_kn242G_JzyuC_StA" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.png') }}" alt="TOT Presents on YouTube">YouTube</a></li>
             </ul>
         </div>
         <div class="footer-section hammerdown">
             <h4>
-                <img src="{{ url_for('static', filename='images/hammerdown_gold.png') }}" alt="Hammerdown" class="footer-icon">
+                <img src="{{ url_for('static', filename='images/hammerdown_gold.png') }}" alt="Hammerdown Logo" class="footer-icon">
                 Hammerdown Social Media
             </h4>
             <ul>
-                <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Facebook">Facebook</a></li>
-                <li><a href="https://www.instagram.com/hammerdownfestival/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Instagram">Instagram</a></li>
+                <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Hammerdown Festival on Facebook">Facebook</a></li>
+                <li><a href="https://www.instagram.com/hammerdownfestival/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Hammerdown Festival on Instagram">Instagram</a></li>
             </ul>
         </div>
     </footer>
-
-    <!-- General JavaScript -->
-    <script src="{{ url_for('static', filename='scripts/base.js') }}"></script>
 
     <!-- Page-specific JavaScript -->
     {% block extra_js %}
