Footer and podcast page optimisations

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -117,7 +117,7 @@ footer .footer-section p.short {
 }
 
 footer .footer-section h4 {
-    color: #ec220c;
+    color: #F43A25;
     margin-bottom: 18px;
     font-size: 1rem;
     display: flex;
