--- a/templates/base.html
+++ b/templates/base.html
@@ -69,32 +69,32 @@
 
     <footer>
         <div class="footer-section address">
-            <h4>
+            <p class="footer-heading">
                 <img src="{{ url_for('static', filename='images/icons/location_pin.png') }}" alt="Location Information" class="footer-icon">
                 Venue Info
-            </h4>
+            </p>
             <p class="full">BuNker11<br>54-60 Heene Rd, Worthing,<br>West Sussex, BN11 3RG</p>
             <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
         <div class="footer-section tot">
-            <h4>
+            <p class="footer-heading">
                 <img src="{{ url_for('static', filename='images/tot_record-invis.png') }}" alt="TOT Presents Logo" class="footer-icon">
                 TOT Social Media
-            </h4>
+            </p>
             <ul>
-                <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="TOT Presents on Facebook">Facebook</a></li>
-                <li><a href="https://www.instagram.com/totpresents/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="TOT Presents on Instagram">Instagram</a></li>
-                <li><a href="https://www.youtube.com/channel/UCDvFWE_kn242G_JzyuC_StA" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.png') }}" alt="TOT Presents on YouTube">YouTube</a></li>
+                <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.webp') }}" alt="TOT Presents on Facebook">Facebook</a></li>
+                <li><a href="https://www.instagram.com/totpresents/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.webp') }}" alt="TOT Presents on Instagram">Instagram</a></li>
+                <li><a href="https://www.youtube.com/channel/UCDvFWE_kn242G_JzyuC_StA" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.webp') }}" alt="TOT Presents on YouTube">YouTube</a></li>
             </ul>
         </div>
         <div class="footer-section hammerdown">
-            <h4>
+            <p class="footer-heading">
                 <img src="{{ url_for('static', filename='images/hammerdown_gold.png') }}" alt="Hammerdown Logo" class="footer-icon">
                 Hammerdown Social Media
-            </h4>
+            </p>
             <ul>
-                <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.png') }}" alt="Hammerdown Festival on Facebook">Facebook</a></li>
-                <li><a href="https://www.instagram.com/hammerdownfestival/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.png') }}" alt="Hammerdown Festival on Instagram">Instagram</a></li>
+                <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.webp') }}" alt="Hammerdown Festival on Facebook">Facebook</a></li>
+                <li><a href="https://www.instagram.com/hammerdownfestival/" target="_blank"><img src="{{ url_for('static', filename='images/footer/instagram-icon.webp') }}" alt="Hammerdown Festival on Instagram">Instagram</a></li>
             </ul>
         </div>
     </footer>
