Huge optimisation and accessibility changes to all pages

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -21,7 +21,7 @@
 }
 
 .about-section a {
-    color: #e63946;
+    color: #F54B38;
     text-decoration: underline;
 }
 
@@ -64,7 +64,7 @@
 }
 
 .about-team-name {
-    color: #ec220c;
+    color: #F54B38;
     font-family: 'Alike Angular', serif;
     font-size: 1.15rem;
     font-weight: bold;
