--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -57,7 +57,7 @@
 }
 
 .contact-email {
-    color: #ec220c;
+    color: #F54B38;
     font-size: 1.1rem;
     font-weight: bold;
     text-decoration: underline;
