--- a/static/css/podcast.css
+++ b/static/css/podcast.css
@@ -92,6 +92,16 @@ lite-youtube {
     color: #f5c518;
 }
 
+.lcp-poster {
+    position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+}
+
+
 @media (max-width: 700px) {
     .podcast-section {
         padding: 10px 2vw;
