--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,7 @@
         <h2>Contact</h2>
         <div class="contact-cards">
             <div class="contact-card tot">
-                <img src="{{ url_for('static', filename='images/tot_simple.JPG') }}" alt="TOT Presents Icon" class="contact-icon">
+                <img src="{{ url_for('static', filename='images/tot_simple.png') }}" alt="TOT Presents Icon" class="contact-icon">
                 <h3>TOT Presents</h3>
                 <a href="mailto:totpresentsworthing@gmail.com" class="contact-email">totpresentsworthing@gmail.com</a>
                 <p class="contact-desc">
