--- a/templates/home.html
+++ b/templates/home.html
@@ -11,12 +11,12 @@
 {% block content %}
 <section class="hero">
     <div class="slideshow">
-        <img src="{{ url_for('static', filename='images/slideshow/slideshow1.webp') }}" alt="Slideshow Image 1">
-        <img src="{{ url_for('static', filename='images/slideshow/slideshow2.webp') }}" alt="Slideshow Image 2">
-        <img src="{{ url_for('static', filename='images/slideshow/slideshow3.webp') }}" alt="Slideshow Image 3">
-        <img src="{{ url_for('static', filename='images/slideshow/slideshow4.webp') }}" alt="Slideshow Image 4">
-        <img src="{{ url_for('static', filename='images/slideshow/slideshow5.webp') }}" alt="Slideshow Image 5">
-        <img src="{{ url_for('static', filename='images/slideshow/slideshow6.webp') }}" alt="Slideshow Image 6">
+        <img src="{{ url_for('static', filename='images/slideshow/jpg/slideshow1.jpg') }}" alt="Slideshow Image 1">
+        <img src="{{ url_for('static', filename='images/slideshow/jpg/slideshow2.jpg') }}" alt="Slideshow Image 2">
+        <img src="{{ url_for('static', filename='images/slideshow/jpg/slideshow3.jpg') }}" alt="Slideshow Image 3">
+        <img src="{{ url_for('static', filename='images/slideshow/jpg/slideshow4.jpg') }}" alt="Slideshow Image 4">
+        <img src="{{ url_for('static', filename='images/slideshow/jpg/slideshow5.jpg') }}" alt="Slideshow Image 5">
+        <img src="{{ url_for('static', filename='images/slideshow/jpg/slideshow6.jpg') }}" alt="Slideshow Image 6">
     </div>
 </section>
 
