--- a/templates/venue.html
+++ b/templates/venue.html
@@ -25,7 +25,7 @@
                     <h3>Facilities</h3>
                     <ul class="venue-details-list">
                         <li><strong>Capacity:</strong> 80 people</li>
-                        <li><strong>Bar:</strong> Bar available until xx:xxam</li>
+                        <li><strong>Bar:</strong> Bar available until 11:00pm</li>
                         <li><strong>Toilets:</strong> On-site</li>
                         <li><strong>Parking:</strong> Free</li>
                     </ul>
@@ -40,7 +40,7 @@
                         <li><strong>SM58:</strong> x3</li>
                         <li><strong>DI box:</strong> x2</li>
                         <li><strong>XLR cables:</strong> x16</li>
-                        <li><strong>Two 58 type mics</strong></li>
+                        <li><strong>58 type mics:</strong> x2</li>
                         <li><strong>Stage snake:</strong> 16x4</li>
                     </ul>
                 </div>
