Added map to venue, removed share button from home

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -18,6 +18,17 @@
                 <a href="{{ url_for('contact') }}">contact us</a> if you need more information.
             </p>
         </div>
+
+        <div class="venue-location">
+            <h2>Location</h2>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3026.7314638250637!2d-0.38732542293823724!3d50.80926737166295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875a28c1d6a10e7%3A0x7e47f12c0aba4478!2sThe%20Charles%20Dickens!5e1!3m2!1sen!2suk!4v1753189349446!5m2!1sen!2suk"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+
         <div class="venue-details">
             <h2>Venue Details</h2>
             <div class="venue-details-categories">
