--- a/templates/base.html
+++ b/templates/base.html
@@ -80,9 +80,9 @@
             <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
         <div class="footer-section tot">
-            <p class="footer-heading">
+            <p class="footer-heading" data-mobile-label="TOT Presents">
                 <img src="{{ url_for('static', filename='images/tot_record-invis.png') }}" alt="TOT Presents Logo" class="footer-icon">
-                TOT Social Media
+                <span class="desktop-label">TOT Social Media</span>
             </p>
             <ul>
                 <li><a href="https://www.facebook.com/p/TOT-Presents-100083193887876/" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.webp') }}" alt="TOT Presents on Facebook">Facebook</a></li>
@@ -91,9 +91,9 @@
             </ul>
         </div>
         <div class="footer-section hammerdown">
-            <p class="footer-heading">
+            <p class="footer-heading" data-mobile-label="Hammerdown">
                 <img src="{{ url_for('static', filename='images/hammerdown_gold.png') }}" alt="Hammerdown Logo" class="footer-icon">
-                Hammerdown Social Media
+                <span class="desktop-label">Hammerdown Social Media</span>
             </p>
             <ul>
                 <li><a href="https://www.facebook.com/HammerdownFestival" target="_blank"><img src="{{ url_for('static', filename='images/footer/facebook-icon.webp') }}" alt="Hammerdown Festival on Facebook">Facebook</a></li>
