--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
             <p class="full">BuNker11<br>54-60 Heene Rd, Worthing,<br>West Sussex, BN11 3RG</p>
             <p class="short">BuNker11<br>54-60 Heene Rd<br>Worthing</p>
         </div>
-        <div class="footer-section tot">
+        <div class="footer-section tot divider">
             <p class="footer-heading" data-mobile-label="TOT Presents">
                 <img src="{{ url_for('static', filename='images/tot_record-invis.png') }}" alt="TOT Presents Logo" class="footer-icon">
                 <span class="desktop-label">TOT Social Media</span>
@@ -90,7 +90,7 @@
                 <li><a href="https://www.youtube.com/channel/UCDvFWE_kn242G_JzyuC_StA" target="_blank"><img src="{{ url_for('static', filename='images/footer/youtube-icon.webp') }}" alt="TOT Presents on YouTube">YouTube</a></li>
             </ul>
         </div>
-        <div class="footer-section hammerdown">
+        <div class="footer-section hammerdown divider">
             <p class="footer-heading" data-mobile-label="Hammerdown">
                 <img src="{{ url_for('static', filename='images/hammerdown_gold.png') }}" alt="Hammerdown Logo" class="footer-icon">
                 <span class="desktop-label">Hammerdown Social Media</span>
