--- a/templates/admin.html
+++ b/templates/admin.html
@@ -27,7 +27,7 @@
     <div class="events-grid">
         {% for event in events %}
         <div class="event-card" data-event-id="{{ event.id }}">
-            <img src="{{ url_for('static', filename=event.image_url) }}" alt="Event Image" class="event-image">
+            <img src="{{ event.image_url }}" alt="Event Image" class="event-image">
             <div class="event-details">
                 <h3 class="event-title">{{ event.title }}</h3>
                 <p class="event-datetime">{{ event.date.strftime('%I:%M %p').lstrip('0') }} - {{ event.formatted_date }}</p>
