--- a/templates/past_events.html
+++ b/templates/past_events.html
@@ -13,7 +13,7 @@
         {% for event in events %}
         <a href="{{ url_for('event_detail', event_id_title=event.id ~ '-' ~ event.title|replace(' ', '-') ) }}">
             <div class="event-card">
-                <img src="{{ url_for('static', filename=event.image_url) }}" alt="Event Image" class="event-image">
+                <img src="{{ event.image_url }}" alt="Event Image" class="event-image">
                 <div class="event-details">
                     <h3 class="event-title">{{ event.title }}</h3>
                     <div class="spacer"></div>
